networking/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: myingress
spec:
  rules:
  - host: myapp.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-nginx-service
            port: 
              number: 80
      - pathType: Prefix
        path: "/order-service"
        backend:
          service:
            name: my-order-service
            port: 
              number: 3000
